--- a/eventapi/html/allevents/infoLibrary.html
+++ b/eventapi/html/allevents/infoLibrary.html
@@ -54,7 +54,7 @@
                         <div class="card special-skill-item border-0">
                             <div class="card-header bg-transparent border-0"><img class="img-fluid" src="assets/img/unnamed.jpg" style="width: 220px;"></div>
                             <div class="card-body">
-                                <h3 class="card-title" data-bs-hover-animate="bounce" style="font-family: 'Abril Fatface', cursive;color: rgb(3,3,3);font-size: 25px;"><a href="https://www.ligo.caltech.edu/page/educational-resources" target="_blank">EDUCATIONAL RESOURCES</a><br></h3>
+                                <h3 class="card-title" data-bs-hover-animate="pulse" style="font-family: 'Abril Fatface', cursive;color: rgb(3,3,3);font-size: 25px;"><a href="https://www.ligo.caltech.edu/page/educational-resources" target="_blank">EDUCATIONAL RESOURCES</a><br></h3>
                                 <p class="card-text">Whether you're a K-12 educator, a parent, or an interested student, you should browse our education web pages. There's something fun and educational here for everyone.<br></p>
                             </div>
                         </div>
@@ -63,7 +63,7 @@
                         <div class="card special-skill-item border-0">
                             <div class="card-header bg-transparent border-0"><img class="img-fluid" src="assets/img/unnamed.jpg" style="width: 220px;"></div>
                             <div class="card-body">
-                                <p class="text-center card-text" data-bs-hover-animate="bounce" style="font-size: 22px;"><a href="https://gracedb.ligo.org/superevents/public/O3/" target="_blank"><strong>PUBLICK ALERT BY LIGO</strong></a><br></p>
+                                <p class="text-center card-text" data-bs-hover-animate="pulse" style="font-size: 22px;"><a href="https://gracedb.ligo.org/superevents/public/O3/" target="_blank"><strong>PUBLICK ALERT BY LIGO</strong></a><br></p>
                             </div>
                         </div>
                     </div>
@@ -71,7 +71,7 @@
                         <div class="card special-skill-item border-0">
                             <div class="card-header bg-transparent border-0"><img class="img-fluid" src="assets/img/unnamed.jpg" style="width: 220px;"></div>
                             <div class="card-body" style="font-size: 22px;">
-                                <p class="card-text" data-bs-hover-animate="bounce"><a href="https://www.zooniverse.org/projects/zooniverse/gravity-spy" target="_blank"><strong>GRAVITY SPY</strong></a><br></p>
+                                <p class="card-text" data-bs-hover-animate="pulse"><a href="https://www.zooniverse.org/projects/zooniverse/gravity-spy" target="_blank"><strong>GRAVITY SPY</strong></a><br></p>
                             </div>
                         </div>
                     </div>
@@ -84,22 +84,21 @@
                         <div class="card special-skill-item border-0">
                             <div class="card-header bg-transparent border-0"><img class="img-fluid" src="assets/img/rjulve32747999-nasa01-estados-unidos-2016-fica-facilitada-181203134335-1543841131889.jpg" style="width: 220px;"></div>
                             <div class="card-body">
-                                <h3 class="card-title" data-bs-hover-animate="bounce" style="font-family: 'Abril Fatface', cursive;color: rgb(3,3,3);font-size: 22px;"><a href="https://play.google.com/store/apps/details?id=org.laserlabs.chirp" target="_blank">LIGO ANDROID</a><br></h3>
-                                <p class="card-text"><br></p>
+                                <h3 class="card-title" data-bs-hover-animate="pulse" style="font-family: 'Abril Fatface', cursive;color: rgb(3,3,3);font-size: 22px;"><a href="https://play.google.com/store/apps/details?id=org.laserlabs.chirp" target="_blank">LIGO ANDROID</a><br></h3>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-4" style="font-family: 'Abril Fatface', cursive;">
                         <div class="card special-skill-item border-0">
                             <div class="card-header bg-transparent border-0"><img class="img-fluid" src="assets/img/rjulve32747999-nasa01-estados-unidos-2016-fica-facilitada-181203134335-1543841131889.jpg" style="width: 220px;"></div>
-                            <div class="card-body d-xl-flex align-items-xl-start"><a class="card-link" href="https://www.ligo.org/sp/science/Publication-GW170817MMA/" style="font-size: 22px;" target="_blank"><strong>BINARY SYSTEM OF NEUTRON STARS</strong><br></a></div>
+                            <div class="card-body d-xl-flex align-items-xl-start" data-bs-hover-animate="pulse"><a class="card-link" href="https://www.ligo.org/sp/science/Publication-GW170817MMA/" style="font-size: 22px;" target="_blank"><strong>BINARY SYSTEM OF NEUTRON STARS</strong><br></a></div>
                         </div>
                     </div>
                     <div class="col-md-4" style="font-family: 'Abril Fatface', cursive;">
                         <div class="card special-skill-item border-0">
                             <div class="card-header bg-transparent border-0"><img class="img-fluid" src="assets/img/PngItem_2522307.png" style="width: 76px;"></div>
                             <div class="card-body">
-                                <p class="card-text" data-bs-hover-animate="bounce" style="font-size: 20px;"><a href="learngravity.html" style="font-size: 22px;"><strong>LEARN GRAVITY</strong></a><br></p>
+                                <p class="card-text" data-bs-hover-animate="pulse" style="font-size: 20px;"><a href="learngravity.html" style="font-size: 22px;"><strong>LEARN GRAVITY</strong></a><br></p>
                             </div>
                         </div>
                     </div>
@@ -112,23 +111,21 @@
                         <div class="card special-skill-item border-0">
                             <div class="card-header bg-transparent border-0"><img class="img-fluid" src="assets/img/GWvisual.jpg" style="width: 197px;"></div>
                             <div class="card-body">
-                                <h3 data-bs-hover-animate="bounce" style="font-family: 'Abril Fatface', cursive;color: rgb(3,3,3);"><a href="https://spaceplace.nasa.gov/gravitational-waves/sp/" style="font-size: 22px;" target="_blank"><br>GRAVITATIONAL WAVES<br></a><br></h3>
-                                <p class="card-text"><br></p>
+                                <h3 data-bs-hover-animate="pulse" style="font-family: 'Abril Fatface', cursive;color: rgb(3,3,3);"><a href="https://spaceplace.nasa.gov/gravitational-waves/sp/" style="font-size: 22px;" target="_blank"><br>GRAVITATIONAL WAVES<br></a><br></h3>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-4" style="font-family: 'Abril Fatface', cursive;">
                         <div class="card special-skill-item border-0">
                             <div class="card-header bg-transparent border-0"><img class="img-fluid" src="assets/img/1366_2000.jpg" style="width: 304px;"></div>
-                            <div class="card-body">
-                                <p class="text-center card-text" data-bs-hover-animate="bounce"></p><a class="card-link" data-bs-hover-animate="pulse" href="https://spaceplace.nasa.gov/supernova/en/" style="font-size: 22px;" target="_blank"><strong>SUPERNOVA</strong></a></div>
+                            <div class="card-body" data-bs-hover-animate="pulse"><a class="card-link" href="https://spaceplace.nasa.gov/supernova/en/" style="font-size: 22px;" target="_blank"><strong>SUPERNOVA</strong></a></div>
                         </div>
                     </div>
                     <div class="col-md-4" style="font-family: 'Abril Fatface', cursive;">
                         <div class="card special-skill-item border-0">
                             <div class="card-header bg-transparent border-0"><img class="img-fluid" src="assets/img/electromagnetica.jpg" style="width: 220px;"></div>
                             <div class="card-body">
-                                <p class="card-text" data-bs-hover-animate="bounce"><a href="https://spaceplace.nasa.gov/magic-windows/en/" style="font-size: 22px;" target="_blank"><strong>ELECTROMAGNETIC SPECTRUM</strong></a><br></p>
+                                <p class="card-text" data-bs-hover-animate="pulse"><a href="https://spaceplace.nasa.gov/magic-windows/en/" style="font-size: 22px;" target="_blank"><strong>ELECTROMAGNETIC SPECTRUM</strong></a><br></p>
                             </div>
                         </div>
                     </div>
