--- a/eventapi/html/allevents/infoLibrary.html
+++ b/eventapi/html/allevents/infoLibrary.html
@@ -110,7 +110,7 @@
                     <div class="col-md-4" style="font-family: 'Abril Fatface', cursive;">
                         <div class="card special-skill-item border-0">
                             <div class="card-header bg-transparent border-0"><img class="img-fluid" src="assets/img/GWvisual.jpg" style="width: 197px;"></div>
-                            <div class="card-body">
+                            <div class="card-body" style="padding: 5px;">
                                 <h3 data-bs-hover-animate="pulse" style="font-family: 'Abril Fatface', cursive;color: rgb(3,3,3);"><a href="https://spaceplace.nasa.gov/gravitational-waves/sp/" style="font-size: 22px;" target="_blank"><br>GRAVITATIONAL WAVES<br></a><br></h3>
                             </div>
                         </div>
@@ -118,13 +118,13 @@
                     <div class="col-md-4" style="font-family: 'Abril Fatface', cursive;">
                         <div class="card special-skill-item border-0">
                             <div class="card-header bg-transparent border-0"><img class="img-fluid" src="assets/img/1366_2000.jpg" style="width: 304px;"></div>
-                            <div class="card-body" data-bs-hover-animate="pulse"><a class="card-link" href="https://spaceplace.nasa.gov/supernova/en/" style="font-size: 22px;" target="_blank"><strong>SUPERNOVA</strong></a></div>
+                            <div class="card-body" data-bs-hover-animate="pulse" style="padding: 20px;"><a class="card-link" href="https://spaceplace.nasa.gov/supernova/en/" style="font-size: 22px;" target="_blank"><strong>SUPERNOVA</strong></a></div>
                         </div>
                     </div>
                     <div class="col-md-4" style="font-family: 'Abril Fatface', cursive;">
                         <div class="card special-skill-item border-0">
                             <div class="card-header bg-transparent border-0"><img class="img-fluid" src="assets/img/electromagnetica.jpg" style="width: 220px;"></div>
-                            <div class="card-body">
+                            <div class="card-body" style="padding: 0px;">
                                 <p class="card-text" data-bs-hover-animate="pulse"><a href="https://spaceplace.nasa.gov/magic-windows/en/" style="font-size: 22px;" target="_blank"><strong>ELECTROMAGNETIC SPECTRUM</strong></a><br></p>
                             </div>
                         </div>
