--- a/eventapi/html/allevents/index.html
+++ b/eventapi/html/allevents/index.html
@@ -50,7 +50,7 @@
                         RAYS - SUPERNOVA&nbsp; AND<br>ELECTROMAGNETIC EMISSION<br><br></p>
                 </div>
             </div>
-            <p class="bounce animated" style="font-family: Sriracha, cursive;">Team "La NASA en tu patio trasero"<br> Members Team Victoria Lomanto - Walter Wagner<br>Outstanding events<br> Data Hub<br></p><img class="img-fluid shadow" src="assets/img/Logo.png">
+            <p class="bounce animated" style="font-family: Sriracha, cursive;">Team "La NASA en tu patio trasero"<br> Members Team Victoria Lomanto - Walter Wagner<br>Outstanding events<br> Data Hub<br></p><img class="img-fluid shadow" src="assets/img/logo2spaceapp.png">
             <div class="container">
                 <p></p>
             </div>
@@ -111,7 +111,7 @@
                     <div class="row no-gutters">
                         <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="assets/img/1366_2000.jpg" style="width: 547px;height: 309px;"></a></div>
                         <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="assets/img/30-11-17-ligo.jpg" style="height: 309px;"></a></div>
-                        <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="assets/img/Logo.png" style="height: 310px;width: 517px;"></a></div>
+                        <div class="col-md-6 col-lg-4 item zoom-on-hover"><a href="#"><img class="img-fluid image" src="assets/img/logo2spaceapp.png" style="height: 310px;width: 517px;"></a></div>
                     </div>
                 </div>
             </section>
