--- a/eventapi/html/allevents/aboutus.html
+++ b/eventapi/html/allevents/aboutus.html
@@ -44,7 +44,7 @@
     </nav>
     <main class="page cv-page">
         <section class="portfolio-block block-intro border-bottom">
-            <div class="container">
+            <div class="container" style="width: 100%;">
                 <div class="about-me">
                     <p>We are a team that wants people to get to know more about Physics, specially the Gravitational Wave's field. This science topic be should be accessible to anybody who wants to learn about Astrophysics. We've created an app to organize
                         and explain in a better way how gravitational waves, and other electromagnetic events works, and how are they detected and to teach everyone this is something every human being could learn, from children to grown-up-people. Also,
