--- a/eventapi/html/allevents/ligo.html
+++ b/eventapi/html/allevents/ligo.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Catalogue</title>
+    <title>About us...</title>
     <meta name="description" content="GW EINSTEIN">
     <link rel="icon" type="image/png" sizes="551x894" href="assets/img/PngItem_2522307.png">
     <link rel="icon" type="image/png" sizes="551x894" href="assets/img/PngItem_2522307.png">
@@ -34,7 +34,7 @@
                     <li class="nav-item" role="presentation"><a class="nav-link" href="index.html">Home</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="project.html">Project</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="https://www.ligo.org" target="_blank">LSC</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="ligo.html" target="_blank">LIGO</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link active" href="ligo.html" target="_blank">LIGO</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="https://www.gw-openscience.org/" target="_blank">GWOSC<br></a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="contact.html">Contact with us<br></a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="aboutus.html"><strong>About us</strong><br></a></li>
@@ -44,32 +44,11 @@
     </nav>
     <main class="page cv-page">
         <section class="portfolio-block block-intro border-bottom">
-            <div class="container text-center">
+            <div class="container" style="width: 100%;">
                 <div class="about-me">
-                    <p style="font-family: 'Abril Fatface', cursive;">Catalogue</p>
+                    <p>LIGO is the largest gravitational wave's Detector on Earth. It has 4km long arms. VIRGO (Italy), GEO (Germany) and TAMA (Japan) are other gravitational waves Detectors.</p>
                 </div>
-            </div>
-            <div class="table-responsive">
-                <table class="table">
-                    <thead>
-                        <tr>
-                            <th><a class="btn btn-primary" role="button" href="catalogue/einstein190814.html">EINSTEIN190814<br></a></th>
-                            <th><a class="btn btn-primary" role="button" href="catalogue/einstein190814.html">EINSTEIN 521</a></th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td><a class="btn btn-primary" role="button" href="catalogue/einstein190814.html">EINSTEIN 520</a></td>
-                            <td><a class="btn btn-primary" role="button" href="catalogue/einstein190814.html">EINSTEIN 425</a></td>
-                        </tr>
-                        <tr>
-                            <td><a class="btn btn-primary" role="button" href="catalogue/einstein190814.html">EINSTEIN 412</a></td>
-                            <td><a class="btn btn-primary" role="button" href="catalogue/einstein190814.html">EINSTEIN 414</a></td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-        </section>
+            </div><img class="img-fluid" src="assets/img/30-11-17-ligo.jpg" style="width: 100%;"></section>
     </main>
     <div class="social-icons"><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="https://www.youtube.com/watch?v=21X5lGlDOfg" target="_blank"><i class="icon ion-social-youtube"></i></a></div>
     <footer
