--- a/eventapi/html/allevents/sounds.html
+++ b/eventapi/html/allevents/sounds.html
@@ -46,25 +46,25 @@
         <section class="portfolio-block block-intro border-bottom">
             <div class="container text-center">
                 <div class="about-me">
-                    <p style="font-family: 'Abril Fatface', cursive;">Catalogue</p>
+                    <p style="font-family: 'Abril Fatface', cursive;">SOUNDS</p>
                 </div>
             </div>
             <div class="table-responsive">
                 <table class="table">
                     <thead>
                         <tr>
-                            <th><a class="btn btn-primary" role="button" href="catalogue/einstein190814.html">EINSTEIN190814<br></a></th>
-                            <th><a class="btn btn-primary" role="button" href="catalogue/einstein190814.html">EINSTEIN 521</a></th>
+                            <th><a class="btn btn-primary" role="button" href="sounds/chirp40-1300Hz.wav">Chirp40-1300Hz<br></a></th>
+                            <th><a class="btn btn-primary" role="button" href="sounds/chirp+LIGO_SNR10.wav">Chirp+LIGO_SNR10521</a></th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
-                            <td><a class="btn btn-primary" role="button" href="catalogue/einstein190814.html">EINSTEIN 520</a></td>
-                            <td><a class="btn btn-primary" role="button" href="catalogue/einstein190814.html">EINSTEIN 425</a></td>
+                            <td></td>
+                            <td></td>
                         </tr>
                         <tr>
-                            <td><a class="btn btn-primary" role="button" href="catalogue/einstein190814.html">EINSTEIN 412</a></td>
-                            <td><a class="btn btn-primary" role="button" href="catalogue/einstein190814.html">EINSTEIN 414</a></td>
+                            <td></td>
+                            <td></td>
                         </tr>
                     </tbody>
                 </table>
