--- a/eventapi/html/allevents/index.html
+++ b/eventapi/html/allevents/index.html
@@ -34,7 +34,7 @@
                     <li class="nav-item" role="presentation"><a class="nav-link active" href="index.html">Home</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="project.html">Project</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="https://www.ligo.org" target="_blank">LSC</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="https://www.ligo.caltech.edu" target="_blank">LIGO</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="ligo.html" target="_blank">LIGO</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="https://www.gw-openscience.org/" target="_blank">GWOSC<br></a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="contact.html">Contact with us<br></a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="aboutus.html"><strong>About us</strong><br></a></li>
@@ -54,7 +54,13 @@
             <div class="container">
                 <p></p>
             </div>
-            <div class="container text-center"><iframe class="shadow" allowfullscreen="" frameborder="0" src="https://www.youtube.com/embed/FANglwyE5dw" width="560" height="315"></iframe></div>
+            <div class="container">
+                <div class="row">
+                    <div class="col" style="width: 30%;"><iframe allowfullscreen="" frameborder="0" src="https://www.youtube.com/embed/hebGhsNsjG0" width="560" height="315" style="width: 100%;"></iframe></div>
+                    <div class="col" style="width: 30%;"><iframe class="shadow" allowfullscreen="" frameborder="0" src="https://www.youtube.com/embed/FANglwyE5dw" width="560" height="315" style="width: 100%;"></iframe></div>
+                    <div class="col" style="width: 30%;"><iframe allowfullscreen="" frameborder="0" src="https://www.youtube.com/embed/YHS9g72npqA" width="560" height="315" style="width: 100%;"></iframe></div>
+                </div>
+            </div>
         </section>
         <section class="shadow portfolio-block photography">
             <div class="container text-center">
@@ -94,6 +100,8 @@
                 <p></p>
             </div>
             <div class="container text-center"><a class="btn btn-primary" role="button" data-bs-hover-animate="shake" href="games.html" style="font-size: 37px;">Games</a></div>
+            <div class="container text-center" style="margin-top: 20px;margin-bottom: 20px;"><a class="btn btn-primary" role="button" data-bs-hover-animate="shake" href="sounds.html" style="font-size: 37px;">Sounds</a></div>
+            <div class="container text-center" style="margin-top: 20px;margin-bottom: 20px;"><a class="btn btn-primary" role="button" data-bs-hover-animate="shake" href="https://www.bbc.co.uk/programmes/p033jbv4" style="font-size: 37px;" target="_blank">Podcast</a></div>
             <div class="container">
                 <p></p>
             </div>
