--- a/eventapi/html/allevents/infoLibrary.html
+++ b/eventapi/html/allevents/infoLibrary.html
@@ -34,7 +34,7 @@
                     <li class="nav-item" role="presentation"><a class="nav-link" href="index.html">Home</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="project.html">Project</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="https://www.ligo.org" target="_blank">LSC</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="https://www.ligo.caltech.edu" target="_blank">LIGO</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="ligo.html" target="_blank">LIGO</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="https://www.gw-openscience.org/" target="_blank">GWOSC<br></a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="contact.html">Contact with us<br></a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="aboutus.html"><strong>About us</strong><br></a></li>
@@ -126,6 +126,69 @@
                             <div class="card-header bg-transparent border-0"><img class="img-fluid" src="assets/img/electromagnetica.jpg" style="width: 220px;"></div>
                             <div class="card-body" style="padding: 0px;">
                                 <p class="card-text" data-bs-hover-animate="pulse"><a href="https://spaceplace.nasa.gov/magic-windows/en/" style="font-size: 22px;" target="_blank"><strong>ELECTROMAGNETIC SPECTRUM</strong></a><br></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="container" style="margin-top: 50px;margin-bottom: -50px;">
+                <p class="text-center" style="font-size: 20px;">There are four main sources of gravitational waves caused by different types of motion and changing mass distributions - continuous, binary system, explosion, and stochastic.<br><br>Many people are familiar with the story of the “Newton's
+                    apple” - one day, while sitting under a tree, Newton observed a falling apple and realized that the moon he saw in the sky was in orbit around the Earth due to the same force that made the apple fall. This force is known as gravity,
+                    and Newton recognized that gravity acts at a distance without physical contact - after all, nothing was touching the famous apple to make it fall. Matter feels the force of gravity because each body with mass has its own gravitational
+                    field, which is added to the rest of the fields in the universe. Agree<br>With Newton's theory of gravity, when a massive object changes places, the entire gravitational field throughout the universe changes instantaneously, and the
+                    resulting gravitational forces change instantaneously accordingly.<br><br>However, Einstein's theory of general relativity - the most commonly accepted description of gravity - ensures that nothing can travel faster than the speed
+                    of light, including information about the positions of masses in the universe, which communicates through the gravitational field. General relativity predicts a change in the gravitational field that propagates through the universe
+                    at the speed of light. Precisely, these changes in the gravitational field are gravitational waves.<br></p>
+            </div>
+            <div class="container">
+                <div class="heading"></div>
+                <div class="row">
+                    <div class="col-md-4" style="font-family: 'Abril Fatface', cursive;">
+                        <div class="card special-skill-item border-0">
+                            <div class="card-header bg-transparent border-0"><img class="img-fluid" src="assets/img/continuous-sp.jpg" style="width: 100%;"></div>
+                            <div class="card-body" style="padding: 5px;">
+                                <h3 data-bs-hover-animate="pulse" style="font-family: 'Abril Fatface', cursive;color: rgb(3,3,3);"><a href="http://www.ligo.org/sp/science/GW-Continuous.php" style="font-size: 22px;" target="_blank"><br><strong>CONTINOUS</strong><br></a><br></h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4" style="font-family: 'Abril Fatface', cursive;">
+                        <div class="card special-skill-item border-0">
+                            <div class="card-header bg-transparent border-0"><img class="img-fluid" src="assets/img/inspiral-sp.jpg" style="width: 100%;"></div>
+                            <div class="card-body" data-bs-hover-animate="pulse" style="padding: 20px;"><a class="card-link" href="http://www.ligo.org/sp/science/GW-Inspiral.php" style="font-size: 22px;" target="_blank"><strong>INSPIRAL</strong><br></a></div>
+                        </div>
+                    </div>
+                    <div class="col-md-4" style="font-family: 'Abril Fatface', cursive;">
+                        <div class="card special-skill-item border-0">
+                            <div class="card-header bg-transparent border-0"><img class="img-fluid" src="assets/img/burst-sp.jpg" style="width: 100%;"></div>
+                            <div class="card-body" style="padding: 0px;">
+                                <p class="card-text" data-bs-hover-animate="pulse"><a href="http://www.ligo.org/sp/science/GW-Burst.php" style="font-size: 22px;" target="_blank"><strong>BURST</strong></a><br></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="heading"></div>
+                <div class="row">
+                    <div class="col-md-4" style="font-family: 'Abril Fatface', cursive;">
+                        <div class="card special-skill-item border-0">
+                            <div class="card-header bg-transparent border-0"></div>
+                            <div class="card-body" style="padding: 5px;">
+                                <h3 data-bs-hover-animate="pulse" style="font-family: 'Abril Fatface', cursive;color: rgb(3,3,3);"><br></h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4" style="font-family: 'Abril Fatface', cursive;">
+                        <div class="card special-skill-item border-0">
+                            <div class="card-header bg-transparent border-0"><img class="img-fluid" src="assets/img/stochastic-sp.jpg" style="width: 100%;"></div>
+                            <div class="card-body" data-bs-hover-animate="pulse" style="padding: 20px;"><a class="card-link" href="http://www.ligo.org/sp/science/GW-Stochastic.php" style="font-size: 22px;" target="_blank"><br><strong>STOCHASTIC</strong><br></a></div>
+                        </div>
+                    </div>
+                    <div class="col-md-4" style="font-family: 'Abril Fatface', cursive;">
+                        <div class="card special-skill-item border-0">
+                            <div class="card-header bg-transparent border-0"></div>
+                            <div class="card-body" style="padding: 0px;">
+                                <p class="card-text" data-bs-hover-animate="pulse"><br></p>
                             </div>
                         </div>
                     </div>
