--- a/eventapi/html/allevents/downloadapp.html
+++ b/eventapi/html/allevents/downloadapp.html
@@ -50,6 +50,7 @@
                 </div>
             </div>
             <div class="container text-center"><a class="btn btn-primary" role="button" href="https://play.google.com/store/apps/details?id=org.laserlabs.chirp" target="_blank">Android Ligo Aplication By Laser Labs</a></div>
+            <div class="container text-center" style="margin-top: 20px;"><a class="btn btn-primary" role="button" href="app/gweistein.apk" target="_blank">GW Einstein Application</a></div>
             <div class="container">
                 <p></p>
             </div>
