--- a/eventapi/html/allevents/index.html
+++ b/eventapi/html/allevents/index.html
@@ -91,7 +91,7 @@
                     </table>
                 </div>
             </div>
-            <div class="container text-center"><a class="btn btn-primary" role="button" data-bs-hover-animate="shake" href="downloadapp.html" style="font-size: 37px;">Download App Soon</a></div>
+            <div class="container text-center"><a class="btn btn-primary" role="button" data-bs-hover-animate="shake" href="downloadapp.html" style="font-size: 37px;">Download App</a></div>
             <div class="container">
                 <p></p>
             </div>
