--- a/eventapi/html/allevents/sounds.html
+++ b/eventapi/html/allevents/sounds.html
@@ -49,6 +49,16 @@
                     <p style="font-family: 'Abril Fatface', cursive;">SOUNDS</p>
                 </div>
             </div>
+            <div class="container">
+                <p><br>These audio files were produced by the code in&nbsp;<a href="https://git.ligo.org/jonah-kanner/audio">this git repo</a>.<br><br>All files and code are intended for educational purposes, and are not representative of published scientific
+                    results.<br><br>Template waveforms are based on the median value of 1-D marginalized parameters, and so do not match the data to a precision appropriate for scientific analysis.<br><br>For each event, the strain data are real interferometer
+                    data that have been whitened and band-passed. The template waveforms are given without detector noise and after applying a band-pass filter. The template and data audio files have the mergers at approximately the same time, around
+                    2 seconds before the end of each file. The L1, GW170817 data are the "cleaned" data with a glitch removed, as described in the&nbsp;<a href="https://www.gw-openscience.org/GWTC-1">GWTC-1 documentation</a>.<br><br>These data represent
+                    the very earliest detections of gravitational wave signals, and in most cases, the signal-to-noise ratio (SNR) is very low. In many cases, this makes the signals difficult or impossible to hear for all but the highest SNR signals.
+                    With good audio equipment, both GW150914 and GW170817 can be heard in the data by most people. Note that, as detector sensitivity improves with time, it is likely that signals will be more clearly audible in the data in future runs.<br><br>Higher
+                    mass mergers, around total mass of 50 solar masses, are 'in-band' for only a very short time before merger, and sound as short 'thuds' lasting around a tenth of a second. On the other hand, binary neutron star mergers are in-band for
+                    tens of seconds, and make a distinctive 'chirping' sound.<br><br>All strain data have been downloaded from the Gravitational Wave Open Science Center at gw-openscience.org<br></p>
+            </div>
             <div class="table-responsive">
                 <table class="table">
                     <thead>
@@ -65,6 +75,26 @@
                         <tr>
                             <td></td>
                             <td></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <div class="table-responsive">
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th>Column 1</th>
+                            <th>Column 2</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Cell 1</td>
+                            <td>Cell 2</td>
+                        </tr>
+                        <tr>
+                            <td>Cell 3</td>
+                            <td>Cell 4</td>
                         </tr>
                     </tbody>
                 </table>
