--- a/eventapi/html/allevents/sounds.html
+++ b/eventapi/html/allevents/sounds.html
@@ -83,18 +83,20 @@
                 <table class="table">
                     <thead>
                         <tr>
-                            <th>Column 1</th>
-                            <th>Column 2</th>
+                            <th style="width: 25%;">Name</th>
+                            <th style="width: 25%;">Total Mass</th>
+                            <th style="width: 25%;">Template</th>
+                            <th style="width: 25%;">Data</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
-                            <td>Cell 1</td>
-                            <td>Cell 2</td>
-                        </tr>
-                        <tr>
-                            <td>Cell 3</td>
-                            <td>Cell 4</td>
+                            <td>EINSTEIN150914<br></td>
+                            <td>Total Mass:<br>66.2 M☉<br></td>
+                            <td><img src="https://www.gw-openscience.org/static/audio/gwtc1/wav/GW150914-template.png"><audio controls=""><source src="https://www.gw-openscience.org/static/audio/gwtc1/wav/GW150914-template.wav" type="audio/wav"></audio></td>
+                            <td>
+                                <p class="text-left">H1</p><audio controls=""><source src="https://www.gw-openscience.org/static/audio/gwtc1/wav/H1-GW150914-data.wav" type="audio/wav"></audio>
+                                <p class="text-left">L1</p><audio controls=""><source src="https://www.gw-openscience.org/static/audio/gwtc1/wav/L1-GW150914-data.wav" type="audio/wav"></audio></td>
                         </tr>
                     </tbody>
                 </table>
