--- a/eventapi/html/allevents/sounds.html
+++ b/eventapi/html/allevents/sounds.html
@@ -93,7 +93,7 @@
                         <tr>
                             <td>EINSTEIN150914<br></td>
                             <td>Total Mass:<br>66.2 M☉<br></td>
-                            <td><img src="https://www.gw-openscience.org/static/audio/gwtc1/wav/GW150914-template.png"><audio controls=""><source src="https://www.gw-openscience.org/static/audio/gwtc1/wav/GW150914-template.wav" type="audio/wav"></audio></td>
+                            <td><img src="https://www.gw-openscience.org/static/audio/gwtc1/wav/GW150914-template.png" style="width: 100%;height: 100%;"><audio controls=""><source src="https://www.gw-openscience.org/static/audio/gwtc1/wav/GW150914-template.wav" type="audio/wav"></audio></td>
                             <td>
                                 <p class="text-left">H1</p><audio controls=""><source src="https://www.gw-openscience.org/static/audio/gwtc1/wav/H1-GW150914-data.wav" type="audio/wav"></audio>
                                 <p class="text-left">L1</p><audio controls=""><source src="https://www.gw-openscience.org/static/audio/gwtc1/wav/L1-GW150914-data.wav" type="audio/wav"></audio></td>
