--- a/eventapi/html/allevents/downloadapp.html
+++ b/eventapi/html/allevents/downloadapp.html
@@ -50,7 +50,7 @@
                 </div>
             </div>
             <div class="container text-center"><a class="btn btn-primary" role="button" href="https://play.google.com/store/apps/details?id=org.laserlabs.chirp" target="_blank">Android Ligo Aplication By Laser Labs</a></div>
-            <div class="container text-center" style="margin-top: 20px;"><a class="btn btn-primary" role="button" href="https://mega.nz/file/5MMniIbS#cLoKm5VdXgC-ro9oXV5_bNJm4C2ANxN3Yc3FJt8AYOc" target="_blank">GW Einstein Application</a></div>
+            <div class="container text-center" style="margin-top: 20px;"><a class="btn btn-primary" role="button" target="_blank" href="https://mega.nz/file/5JUBBQra#yMX1Yv16tyOG7VqhAx8ttgSaYjodSRR0uDgH6RWD0tw">GW Einstein Application Android</a></div>
             <div class="container">
                 <p></p>
             </div>
